# meta-env

./: README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  __init__.py  app.py  environment.py
